--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@supabase/supabase-js": "^2.83.0",
     "clsx": "latest",
     "lucide-react": "0.522.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.2",
     "tailwind-merge": "latest"
   },
